--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,8 +23,7 @@
                     Join us as we share experiences, resources, and hope, creating a supportive network for all families 
                     touched by CHARGE syndrome!
                 </p>
-                    
-                <a href="{{accounts_signup}}" class="btn btn-primary">Join Us Now!</a>
+                <a href="/accounts/signup/" role="button" class="btn btn-primary w-25">Join Us Now!</a>
             </div>
         </div>
     </div>
