--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -26,64 +26,65 @@
         </div>
     </div>
     <hr>
-    <!-- Like button with heart icon -->
+    <!-- display count of comments -->
     <div class="row">
-        <div class="col-1">
-            <strong>
-                {% if user.is_authenticated %}
-                <form action="{% url 'post_like' post.id %}" method="POST">
-                    {% csrf_token %}
-                    {% if post_is_liked %}
-                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like"><i
-                            class="bi bi-suit-heart-fill"></i> {{ post.number_of_likes }}
-                    </button>
-                    {% else %}
-                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like"><i
-                            class="bi bi-suit-heart"></i> {{ post.number_of_likes }}
-                    </button>
-                    {% endif %}
-                </form>
-                {% else %}
-                <i class="bi bi-suit-heart"></i>{{ post.number_of_likes }}
-                {% endif %}
-            </strong>
+        <div class="comment-count">
+            {% if post.comments.count is none  %}
+            <i class="bi bi-chat"></i> {{ post.comments.count }}
+            {% else %}
+            <i class="bi bi-chat-text"></i> {{ post.comments.count }}
+            {% endif %}
         </div>
-        <!-- Comment count -->
-        <div class="col-1">
-            <strong>
-                <i class="bi bi-chat"></i> {{ post.comments.count }}
-            </strong>
+          <!-- Display count of likes -->
+        <div class="like-count">
+          <div>
+            {% if user.is_authenticated %}
+            <form class="d-inline" action="{% url 'post_like' post.id %}" method="POST">
+              {% csrf_token %}
+              {%  if post_is_liked %}
+              <button  type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
+                class="bi bi-suit-heart-fill"></i></button>
+              {% else %}
+              <button type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
+                class="bi bi-suit-heart"></i>
+              {% endif %}
+            </form>
+            {% else %}
+            <span class=""><i
+                class="bi bi-suit-heart"></i>/i></span>
+            {% endif %}
+            <span class=""> {{ post.number_of_likes }} </span>
+          </div> 
         </div>
     </div>
     <br>
-
-    <h1>Comments:</h1>
-    {% if user.is_authenticated %}
-    <a class="btn btn-primary btn-sm mb-4" href="{% url 'new_comment' pk=post.pk %}" role="button">Add comment</a>
-    {% else %}
-    <a class="text-decoration-none" href="/accounts/login/">
-        <p>Sign in to leave a comment</p>
-    </a>
-    {% endif %}
-    {% for comment in post.comments.all %}
-    <div class="card-comment">
-        <p>
-            <strong>{{ comment.user }}</strong> -
-            <span class="text-muted">
-                {{ comment.created_on }}
-            </span>
-            <br>
-            {{ comment.body|safe }}
-        </p>
-        {% if request.user == comment.user %}
-        <a href="{% url 'edit_comment' comment.id %}"><small>Edit</small></a>
-        <a href="{% url 'delete_comment' comment.id %}"><small>Delete</small></a>
+    <div>
+        <h1>Comments:</h1>
+        {% if user.is_authenticated %}
+        <a class="btn btn-primary btn-sm mb-4" href="{% url 'new_comment' pk=post.pk %}" role="button">Add comment</a>
+        {% else %}
+        <a class="text-decoration-none" href="/accounts/login/">
+            <p>Sign in to leave a comment</p>
+        </a>
         {% endif %}
-    </div>
-
-    {% empty %}
-    <p>No comments here yet!</p>
-</div>
-{% endfor %}
+        {% for comment in post.comments.all %}
+        <div class="card-comment">
+            <p>
+                <strong>{{ comment.user }}</strong> -
+                <span class="text-muted">
+                    {{ comment.created_on }}
+                </span>
+                <br>
+                {{ comment.body|safe }}
+            </p>
+            {% if request.user == comment.user %}
+            <a href="{% url 'edit_comment' comment.id %}"><small>Edit</small></a>
+            <a href="{% url 'delete_comment' comment.id %}"><small>Delete</small></a>
+            {% endif %}
+        </div>
+        {% empty %}
+        <p>No comments here yet!</p>
+        </div>
+        {% endfor %}
 </div>
 {% endblock content %}
