--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,64 +1,60 @@
 {% load static %}
 
-
-<header class="site-header justify-content-center" role="banner">
+<!-- logo large screens -->
+<header class="site-header justify-content-center">
   <div class="container-fluid">
     <div class="site-header-inner col-sm-12">
         <a href="{% url 'home' %}" title="Charge Together" rel="home">
           <img src="{% static 'images/charge-together-high-resolution-logo.webp' %}" alt="Charge Together Logo">
         </a>
-      </div>
+    </div>
   </div>
 </header>
 {% with request.resolver_match.url_name as url_name %}
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
-       <!-- Logo -->
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/charge-together-high-resolution-logo2.webp' %}" alt="Charge Together Logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Navigation items -->
-        <div class="collapse navbar-collapse  justify-content-center" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item-1">
-              <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
-            </li>
-            <li class="nav-item-1">
-              <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" href="{% url 'post_list' %}">Blog</a>
-            </li>
-            <li class="nav-item-1">
-              <a class="nav-link {% if url_name == 'about' %}active{% endif %}" href="{% url 'about' %}">About</a>
-            </li>
-            <li class="nav-item-1">
-              <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact</a>
-            </li>
-            {% if request.user.is_authenticated %}
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
-              <ul class="dropdown-menu">
-                <li class="nav-item">
-                  <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.id %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}" href="{% url 'create_post' %}">Create Post</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link {% if url_name == 'accounts_logout' %}active {% endif %}" href="/accounts/logout/">Logout</a>
-                </li>
-              </ul>
-            </li>
-            {% else %}
-            <li class="nav-item-1">
-              <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
-            </li>
-            <li class="nav-item-1">
-              <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
-            </li>
-            {% endif %}
-          </ul>
-        </div>
+      <!-- Logo small screens -->
+      <a class="navbar-brand" aria-label="brand-logo"  href="{% url 'home' %}"> <img src="{% static 'images/charge-together-high-resolution-logo2.webp' %}" alt="Charge Together Logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- navigation items -->
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" aria-current="page" href="{% url 'post_list' %}">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if url_name == 'about' %}active{% endif %}" aria-current="page" href="{% url 'about' %}">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" href="{% url 'contact' %}">Contact</a>
+          </li>
+          {% if request.user.is_authenticated %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="{{ user.username }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{ user.username }}
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item {% if url_name == 'profile' %}active{% endif %}" aria-current="page" href="{% url 'profile' request.user.id %}">Profile</a></li>
+              <li><a class="dropdown-item {% if url_name == 'create_post' %}active{% endif %}" aria-current="page" href="{% url 'create_post' %}">Create Post</a></li>
+              <li><a class="dropdown-item {% if url_name == 'account_logout' %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Sign out</a></li>
+            </ul>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link {% if url_name == 'account_signup' %}active{% endif %}" aria-current="page" href="{% url 'account_signup' %}">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if url_name == 'account_login' %}active{% endif %} "aria-current="page" href="{% url 'account_login' %}">Sign in</a>
+          </li>
+          {% endif %}
+        </ul>
       </div>
-  </nav>  
+    </div>
+  </nav>
 {% endwith %}
 
