--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -11,7 +11,7 @@
   {% for post in post_list %}
   <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}">
     <div class="card m-3" style="width:18rem;">
-      <img src="{{post.image.url}}" class="card-img-top img-fluid"  alt="{{post.image_alt}}">
+      <img src="{{post.image.url}}" class="card-img-top img-fluid" alt="{{post.image_alt}}">
 
       <!-- image-flash from "I think therfore i blog" -->
       <div class="image-flash p-1">
@@ -22,7 +22,8 @@
         <hr>
         <p class="card-text">{{post.excerpt|truncatechars:60}}</p>
         <hr>
-        <p class="card-text text-muted">{{post.created_on}} <i class="bi bi-chat"></i> {{ post.comments.count }} <i class="bi bi-suit-heart"></i> {{post.number_of_likes}} </p>
+        <p class="card-text text-muted">{{post.created_on}} <i class="bi bi-chat"></i> {{ post.comments.count }} <i
+            class="bi bi-suit-heart"></i> {{post.number_of_likes}} </p>
       </div>
     </div>
   </a>
