--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -35,26 +35,25 @@
             <i class="bi bi-chat-text"></i> {{ post.comments.count }}
             {% endif %}
         </div>
-          <!-- Display count of likes -->
+        <!-- Display count of likes -->
         <div class="like-count">
-          <div>
-            {% if user.is_authenticated %}
-            <form class="d-inline" action="{% url 'post_like' post.id %}" method="POST">
-              {% csrf_token %}
-              {%  if post_is_liked %}
-              <button  type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
-                class="bi bi-suit-heart-fill"></i></button>
-              {% else %}
-              <button type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
-                class="bi bi-suit-heart"></i>
-              {% endif %}
-            </form>
-            {% else %}
-            <span class=""><i
-                class="bi bi-suit-heart"></i>/i></span>
-            {% endif %}
-            <span class=""> {{ post.number_of_likes }} </span>
-          </div> 
+            <div>
+                {% if user.is_authenticated %}
+                <form class="d-inline" action="{% url 'post_like' post.id %}" method="POST">
+                    {% csrf_token %}
+                    {%  if post_is_liked %}
+                    <button type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
+                            class="bi bi-suit-heart-fill"></i></button>
+                    {% else %}
+                    <button type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
+                            class="bi bi-suit-heart"></i>
+                        {% endif %}
+                </form>
+                {% else %}
+                <span class=""><i class="bi bi-suit-heart"></i>/i></span>
+                {% endif %}
+                <span class=""> {{ post.number_of_likes }} </span>
+            </div>
         </div>
     </div>
     <br>
@@ -63,7 +62,7 @@
         {% if user.is_authenticated %}
         <a class="btn btn-primary btn-sm mb-4" href="{% url 'new_comment' pk=post.pk %}" role="button">Add comment</a>
         {% else %}
-        <a class="text-decoration-none" href="/accounts/login/">
+        <a class="text-decoration-none" href="{% url 'account_login' %}">
             <p>Sign in to leave a comment</p>
         </a>
         {% endif %}
@@ -84,7 +83,7 @@
         </div>
         {% empty %}
         <p>No comments here yet!</p>
-        </div>
-        {% endfor %}
+    </div>
+    {% endfor %}
 </div>
 {% endblock content %}
