--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -6,19 +6,24 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock head_title %}
 
 {% block content %}
+<div class="container text-center">
+   
+    
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    <form class="form p-2" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+        <h1 class="text-center">{% trans "Password Reset" %}</h1>
+        {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+    
+        <p class="text-center">{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
+        <p class="text-center">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        {{ form|crispy }}
+        <input class="btn btn-primary w-25 mb-2" role="button" type="submit" value="{% trans 'Reset My Password' %}" />
+        
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    
+</div>
 {% endblock content %}
