--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -50,7 +50,7 @@
                         {% endif %}
                 </form>
                 {% else %}
-                <span class=""><i class="bi bi-suit-heart"></i>/i></span>
+                <span class=""><i class="bi bi-suit-heart"></i></span>
                 {% endif %}
                 <span class=""> {{ post.number_of_likes }} </span>
             </div>
