add missed endtag to button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -46,8 +46,8 @@
                             class="bi bi-suit-heart-fill"></i></button>
                     {% else %}
                     <button type="submit" name="post_id" value="{{post.id}}" class="like-count"><i
-                            class="bi bi-suit-heart"></i>
-                        {% endif %}
+                            class="bi bi-suit-heart"></i></button>
+                    {% endif %}
                 </form>
                 {% else %}
                 <span class=""><i class="bi bi-suit-heart"></i></span>
