trying to display liked heart to deplyed app

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,7 +111,7 @@ main {
 
 .like-count {
     font-size: 20px;
-    /* color: white !important; */
+    color: black!important;
     display: contents;
     padding-right: 10px;
 
