--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -6,74 +6,74 @@
 {% block title %}Profile - {{profile.user.username}}{% endblock title %}
 <!-- The profile page -->
 {% block content %}
-<div class="container p-4">
-    <div class="profile-info">
-        <div class="profile-card mb-4">
-            <div class="row ">
-                <div class="profile-img col-md-4">
-                    {% if profile.image.url is not none %}
-                        <img src="{{ profile.image.url }}" alt="{{ profile.user.username }}'s profile image">
-                        {% else %}
-                        <img src="{% static '/icons/no-image-photography-icon.webp' %}" alt="Image not found icon">
-                    {% endif %}
-                    <br><br>
-                        <p><strong>Name: </strong>{{profile.user.username}}</p>
-                        <p><strong>Joined: </strong>{{profile.user.date_joined|date:'d M Y'}}</p>
-                        <p><strong>Post: </strong>{{profile.user.post_owner.count}}</p>
-                    {% if request.user == profile.user %}
+    <div class="container p-4">
+        <div class="profile-info">
+            <div class="profile-card mb-4">
+                <div class="row ">
+                    <div class="profile-img col-md-4">
+                        {% if profile.image.url is not none %}
+                            <img src="{{ profile.image.url }}" alt="{{ profile.user.username }}'s profile image">
+                            {% else %}
+                            <img src="{% static '/icons/no-image-photography-icon.webp' %}" alt="Image not found icon">
+                        {% endif %}
+                        <br><br>
+                            <p><strong>Name: </strong>{{profile.user.username}}</p>
+                            <p><strong>Joined: </strong>{{profile.user.date_joined|date:'d M Y'}}</p>
+                            <p><strong>Post: </strong>{{profile.user.post_owner.count}}</p>
+                        {% if request.user == profile.user %}
                             <button id="myBtn" class="btn btn-secondary w-30 btn-edit">Edit Profile</button>
                         {% endif %}
-                </div>
-                <div class="col-md-8">
-                    <div class="profile-card-body">
-                        <h1 class="text-center">About Me!</h1>
-                        <hr>
-                        <div class="text-center">
-                            {% if profile.bio is not none %}
-                            {{ profile.bio|safe }}
-                            {% endif %}
+                    </div>
+                    <div class="col-md-8">
+                        <div class="profile-card-body">
+                            <h1 class="text-center">About Me!</h1>
+                            <hr>
+                            <div class="text-center">
+                                {% if profile.bio is not none %}
+                                {{ profile.bio|safe }}
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div> 
-    </div>
-</div>
-<!-- Users own blog posts on their profile -->
-<div class="latest-bg">
-    <h2 class="text-center">Latest Post</h2>
-    <div class="lastest-card card-container d-flex flex-row flex-wrap justify-content-center row row-cols-1 row-cols-md-3">
-        {% for post in profile.user.post_owner.all %}
-            <div class="card mb-3">
-                <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}"></a>
-                <div class="card-body">
-                    <h3 class="card-title">
-                        {{post.title}}
-                    </h3>
-                    <p class="card-text text-muted h6">{{post.created_on}} <i class="far fa-heart"></i>
-                        {{ post.number_of_likes }}
-                    </p>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
-</div>
-    <!-- The Modal for edit profile -->
-    <div id="myModal" class="modal mt-5">
-        <!-- Modal content -->
-        <div class="modal-content container">
-            <span class="close fs-1 p-2">&times;</span>
-            <form method="POST" action="{% url 'edit_profile' request.user.id %}" class="mb-2 p-2" enctype="multipart/form-data">
-                <h2 class="text-center fs-4">Edit Profile</h2>
-                {% csrf_token %}
-                {{ form|crispy }}
-                {{ form.media }}
-                <div class="d-flex-justify-content-center">
-                    <button type="submit" class="btn btn-primary w-25">Edit Profile</button>
-                </div>
-            </form>
+            </div> 
         </div>
     </div>
+    <!-- Users own blog posts on their profile -->
+    <div class="latest-bg">
+        <h2 class="text-center">Latest Post</h2>
+        <div class="lastest-card card-container d-flex flex-row flex-wrap justify-content-center row row-cols-1 row-cols-md-3">
+            {% for post in profile.user.post_owner.all %}
+                <div class="card mb-3">
+                    <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}"></a>
+                    <div class="card-body">
+                        <h3 class="card-title">
+                            {{post.title}}
+                        </h3>
+                        <p class="card-text text-muted h6">{{post.created_on}} <i
+                            class="bi bi-suit-heart"></i> {{ post.number_of_likes }}
+                        </p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+        <!-- The Modal for edit profile -->
+        <div id="myModal" class="modal mt-5">
+            <!-- Modal content -->
+            <div class="modal-content container">
+                <span class="close fs-1 p-2">&times;</span>
+                <form method="POST" action="{% url 'edit_profile' request.user.id %}" class="mb-2 p-2" enctype="multipart/form-data">
+                    <h2 class="text-center fs-4">Edit Profile</h2>
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    {{ form.media }}
+                    <div class="d-flex-justify-content-center">
+                        <button type="submit" class="btn btn-primary w-25">Edit Profile</button>
+                    </div>
+                </form>
+            </div>
+        </div>
 {% endblock content %}
 
 <!-- extra js for the model to edit profile-->
