--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -45,15 +45,17 @@
         <div class="lastest-card card-container d-flex flex-row flex-wrap justify-content-center row row-cols-1 row-cols-md-3">
             {% for post in profile.user.post_owner.all %}
                 <div class="card mb-3">
-                    <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}"></a>
-                    <div class="card-body">
-                        <h3 class="card-title">
-                            {{post.title}}
-                        </h3>
-                        <p class="card-text text-muted h6">{{post.created_on}} <i
-                            class="bi bi-suit-heart"></i> {{ post.number_of_likes }}
-                        </p>
-                    </div>
+                    <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}">
+                        <div class="card-body">
+                            <h3 class="card-title">
+                                {{post.title}}
+                            </h3>
+                            <p class="card-text text-muted h6">{{post.created_on}} <i
+                                class="bi bi-suit-heart"></i> {{ post.number_of_likes }}
+                            </p>
+                        
+                        </div>
+                    </a>
                 </div>
             {% endfor %}
         </div>
